--- a/frontend/src/app/history.component/history.component.css
+++ b/frontend/src/app/history.component/history.component.css
@@ -1,9 +1,15 @@
 * {
   box-sizing: border-box;
 }
+
 .main-container {
-  margin: 2rem 15rem; 
+  margin: 5% 11%; 
 }
+
+.history-challenges-container{
+  padding: 0%;
+}
+
 .history-container{
     background-color: white;
     padding: 2rem;
@@ -12,6 +18,7 @@
     width: 100%;
 
 }
+
 .history-header{
     display: flex;
     justify-content: space-between;
@@ -19,15 +26,31 @@
     align-items: center;
 }
 
-.history-challenges-container{
-margin: 2rem 0;
+.button-holder{
+  gap: 2rem;
+  display: flex;
 }
+
 .history-challenges-container li{
-  
-  margin: 2rem 0;
+
+  margin: 3% 0%;
   list-style: none;
 }
 .button-holder{
   gap: 2rem;
   display: flex;
+}
+
+@media screen and (max-width: 600px) {
+
+  .history-header {
+    flex-direction: column; 
+    gap: 1rem;             
+    align-items: flex-start; 
+  }
+
+  .button-holder {
+    flex-direction: column; 
+    gap: 1rem;
+  }
 }
